# IconConverter

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  ELECTRON_README.md  FINAL_VERIFICATION_CHECKLIST.md  IconConv.py  LICENSE  MANIFEST.in  Makefile  QUALITY_METRICS.md  README.md  TASK_14_3_ADDITION_SUMMARY.md  TESTING_GUIDE_JA.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  implementation_plan.md  jest.config.js  main.py  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pyproject.toml  release-notes.md  renovate.json  requirements.txt  walkthrough.md
.amazonq/rules/: implementation-rules.md  quality-rules.md
.github/workflows/: build-and-sign.yml  ci-cd.yml  ci.yml  electron-tests.yml  frontend-test.yml  quality-check.yml  release.yml  security-check.yml  security.yml  verify-signing.yml
.kiro/specs/electron-migration/: README.md  TASK_14_3_ADDED.md  design.md  requirements.md  tasks.md  technical-challenges.md
.kiro/specs/webui-migration/: design.md  requirements.md  tasks.md
.kiro/steering/: README.md  general-rules.md  product.md  tech.md
archive/: structure.md  tech.md
assets/: .gitkeep
backend/: .dockerignore  Dockerfile  README.md  __init__.py  exceptions.py  main.py  models.py  pyproject.toml  test-results.txt
backend/core/: __init__.py  logger.py  logic.py  utils.py
backend/routers/: .gitkeep  __init__.py  convert.py  health.py
backend/services/: __init__.py  conversion.py  validation.py
backend/tests/: .gitkeep  conftest.py  test_api.py  test_conversion.py  test_core_logic.py  test_core_utils.py  test_exceptions.py  test_models.py  test_performance.py  test_routers.py  test_validation.py
docker/: README.md
docs/: ACCESSIBILITY.md  API.md  ARCHITECTURE.md  CODE_REVIEW.md  INSTALLATION.md  PERFORMANCE.md  REFACTOR_PLAN.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md  TROUBLESHOOTING.md  USER_MANUAL.md
electron/: AUTO_UPDATE_IMPLEMENTATION_SUMMARY.md  FILE_ASSOCIATION_IMPLEMENTATION.md  IPC_IMPLEMENTATION_SUMMARY.md  MEMORY_OPTIMIZATION_SUMMARY.md  PACKAGING_IMPLEMENTATION_SUMMARY.md  README.md  STARTUP_OPTIMIZATION_SUMMARY.md  SYSTEM_TRAY_SUMMARY.md  TRAY_IMPLEMENTATION.md  main.js  preload.js  splash.html  test-image-processing.js  test-modules.js  test-tray.js  verify-memory-optimization.js
electron/services/: file-manager.js  image-converter.js  image-processor.js  memory-manager.js  system-integration.js  tray-manager.js  updater.js
electron/services/__tests__/: memory-manager.test.js  system-integration.test.js  updater.test.js
electron/utils/: ico-generator.js  lazy-loader.js  startup-timer.js  transparency-processor.js  validation.js
electron/utils/__tests__/: lazy-loader.test.js  startup-timer.test.js  validation.test.js
electron/workers/: WORKER_IMPLEMENTATION_SUMMARY.md  image-worker.js  performance-test.js  verify-worker-pool.js  worker-pool.js
electron/workers/__tests__/: worker-pool.test.js
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  TESTING.md  TEST_STABILITY.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: .gitignore  README.md  conversion-flow.spec.ts  global-setup.ts  ui-interactions.spec.ts
frontend/playwright-report/: index.html
frontend/scripts/: performance-test.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/adapters/: image-api.ts
frontend/src/components/: ConversionOptions.tsx  ConversionProgress.tsx  ConvertButton.tsx  FileUploader.tsx  ImagePreview.tsx  Layout.tsx  ThemeToggle.tsx
frontend/src/components/__tests__/: ConversionOptions.test.tsx  ConversionProgress.test.tsx  ConvertButton.test.tsx  FileUploader.test.tsx  ImagePreview.test.tsx
frontend/src/components/ui/: button.tsx  checkbox.tsx  progress.tsx  toast.tsx
frontend/src/hooks/: useElectronSettings.ts  useImageConversion.ts  useNetworkStatus.ts  useTheme.ts
frontend/src/hooks/__tests__/: useTheme.test.ts
frontend/src/services/: api.ts
frontend/src/services/__tests__/: api.test.ts
frontend/src/stores/: imageStore.ts
frontend/src/stores/__tests__/: imageStore.test.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: electron.ts
frontend/test-results/: .last-run.json
frontend/test-results/conversion-flow-画像変換フロー-透明化オプションを変更できる（要件3-1-3-2）-chromium/: error-context.md
icon_converter/: config.py  gui.py  logic.py  utils.py
iconconverter/: __main__.py  config.py  logic.py  utils.py
shared/types/: electron-api.ts
tests/: FINAL_STATUS.md  FULL_FEATURE_TEST_CHECKLIST.md  FULL_FEATURE_TEST_REPORT.md  PLATFORM_TESTING_GUIDE.md  README.md  TASK_14_1_COMPLETION_REPORT.md  TASK_14_1_IMPLEMENTATION_SUMMARY.md  TEST_EXECUTION_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  run-all-tests.sh  run-full-feature-test.sh  test_gui.py  test_integration.py  test_jpeg_conversion.py  test_logic.py  verify-test-setup.js
tests-legacy/: README.md  conftest.py  test_logic.py
tests/e2e/: accessibility.accessibility.spec.js  app-launch.spec.js  file-operations.spec.js
tests/integration/: full-feature-test.spec.js
tests/mocks/: electron.mock.js
tests/mocks/images/: test.tiff
tests/performance/: performance-test.js
tests/setup/: create-test-images.js  jest.setup.js
tests/unit/: image-converter.test.js
